# FastAPI_ML

backend/app/: .env.template  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  user.py  video.py
backend/app/crud/: user_crud.py
backend/app/migration/: env.py
backend/app/migration/versions/: 2026_01_29_1105-1bb50ad7cb3a_create_usertable.py  2026_02_01_2203-e3dab78501f1_create_video_table.py
backend/app/ml/: processor.py  worker.py
backend/app/models/: __init__.py  base.py  db_helper.py  user.py  video.py
backend/app/schemas/: token.py  user.py
backend/app/service/: task.py  video.py
backend/app/utils/: secure.py  token.py
